[gd_scene load_steps=12 format=3]

[ext_resource type="PackedScene" uid="uid://bp5dr3h8j1x2w" path="res://Scene/Base/BaseThroughLevel.tscn" id="1"]
[ext_resource type="Script" path="res://Script/Level/Level_7.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dppvvdnlx00q7" path="res://Art/Level/Level_Sjg/248.png" id="3"]
[ext_resource type="Texture2D" uid="uid://cp5cr5bdwvyn3" path="res://Art/Level/Level_7/112.png" id="4"]
[ext_resource type="Texture2D" uid="uid://djcis41akx7fq" path="res://Art/Level/Level_7/225.png" id="5"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(811, 1420)
script = null

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(845.5, 1420)
script = null

[sub_resource type="RectangleShape2D" id="3"]
size = Vector2(101.5, 1420)
script = null

[sub_resource type="RectangleShape2D" id="4"]
size = Vector2(781.5, 1420)
script = null

[sub_resource type="RectangleShape2D" id="5"]
size = Vector2(4853, 669)
script = null

[sub_resource type="RectangleShape2D" id="6"]
size = Vector2(258, 24.5)
script = null

[node name="Level_7" instance=ExtResource( "1" )]
script = ExtResource( "2" )

[node name="wall" parent="." index="0"]
collision_mask = 0

[node name="stop1" type="CollisionShape2D" parent="wall" index="1"]
position = Vector2(1501.5, -217)
shape = SubResource( "1" )
metadata/_edit_lock_ = true

[node name="stop2" type="CollisionShape2D" parent="wall" index="2"]
position = Vector2(2671.25, -221)
shape = SubResource( "2" )
metadata/_edit_lock_ = true

[node name="stop3" type="CollisionShape2D" parent="wall" index="3"]
position = Vector2(3548.25, -201)
shape = SubResource( "3" )
metadata/_edit_lock_ = true

[node name="stop4" type="CollisionShape2D" parent="wall" index="4"]
position = Vector2(4988.25, -217)
shape = SubResource( "4" )
metadata/_edit_lock_ = true

[node name="stop5" type="CollisionShape2D" parent="wall" index="5"]
position = Vector2(3208, -211)
shape = SubResource( "4" )
disabled = true
metadata/_edit_lock_ = true

[node name="floor" type="CollisionShape2D" parent="wall" index="6"]
position = Vector2(2423.5, 738.5)
shape = SubResource( "5" )
metadata/_edit_lock_ = true

[node name="248" type="Sprite2D" parent="BackGround/End" index="0"]
position = Vector2(719, 248)
texture = ExtResource( "3" )
metadata/_edit_lock_ = true

[node name="front" type="ParallaxLayer" parent="BackGround" index="1"]

[node name="112" type="Sprite2D" parent="BackGround/front" index="0"]
position = Vector2(2469, 358)
texture = ExtResource( "4" )
metadata/_edit_lock_ = true

[node name="225" type="Sprite2D" parent="BackGround/floor_2" index="1"]
position = Vector2(2351, 405)
texture = ExtResource( "5" )
metadata/_edit_lock_ = true

[node name="stage" type="StaticBody2D" parent="." index="10"]
collision_layer = 32
collision_mask = 0

[node name="stage_1" type="CollisionShape2D" parent="stage" index="0"]
position = Vector2(1179, 245.75)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_2" type="CollisionShape2D" parent="stage" index="1"]
position = Vector2(1435, 121)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_3" type="CollisionShape2D" parent="stage" index="2"]
position = Vector2(1678, 248)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_4" type="CollisionShape2D" parent="stage" index="3"]
position = Vector2(3034, 113)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_5" type="CollisionShape2D" parent="stage" index="4"]
position = Vector2(3285, 267)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="stage_6" type="CollisionShape2D" parent="stage" index="5"]
position = Vector2(3544, 115)
shape = SubResource( "6" )
one_way_collision = true
metadata/_edit_lock_ = true

[node name="exit" parent="." index="11"]
position = Vector2(4378, 325)
metadata/_edit_lock_ = true
